--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+anyhow = "1.0"
+hyper = "0.13"
+tokio = { version = "0.2", features = ["fs", "macros"] }
