Move server into a workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,2 @@
-[package]
-name = "aldebaran"
-version = "0.1.0"
-edition = "2018"
-
-[dependencies]
-anyhow = "1.0"
-hyper = "0.13"
-tokio = { version = "0.2", features = ["fs", "macros"] }
+[workspace]
+members = ["server"]
