--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0"
+futures = "0.3"
 hyper = "0.13"
-tokio = { version = "0.2", features = ["fs", "macros"] }
+notify = "5.0.0-pre.3"
+tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded"] }
 wasm-bindgen-cli-support = "0.2"
