--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -8,4 +8,11 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 console_error_panic_hook = "0.1"
+js-sys = "0.3"
 wasm-bindgen = "0.2"
+web-sys = { version = "0.3", features = [
+  "BinaryType",
+  "ErrorEvent",
+  "MessageEvent",
+  "WebSocket"
+] }
