--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -13,6 +13,8 @@ wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = [
   "BinaryType",
   "ErrorEvent",
+  "Location",
   "MessageEvent",
-  "WebSocket"
+  "WebSocket",
+  "Window"
 ] }
