--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -12,7 +12,9 @@ js-sys = "0.3"
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = [
   "BinaryType",
+  "Document",
   "ErrorEvent",
+  "HtmlElement",
   "Location",
   "MessageEvent",
   "WebSocket",
