--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -14,9 +14,11 @@ web-sys = { version = "0.3", features = [
   "BinaryType",
   "Document",
   "ErrorEvent",
+  "HtmlCanvasElement",
   "HtmlElement",
   "Location",
   "MessageEvent",
+  "WebGlRenderingContext",
   "WebSocket",
   "Window"
 ] }
