--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -18,7 +18,11 @@ web-sys = { version = "0.3", features = [
   "HtmlElement",
   "Location",
   "MessageEvent",
-  "WebGlRenderingContext",
+  "WebGlBuffer",
+  "WebGlProgram",
+  "WebGl2RenderingContext",
+  "WebGlShader",
+  "WebGlVertexArrayObject",
   "WebSocket",
   "Window"
 ] }
