--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -24,5 +24,6 @@ web-sys = { version = "0.3", features = [
   "WebGlShader",
   "WebGlVertexArrayObject",
   "WebSocket",
-  "Window"
+  "Window",
+  "console"
 ] }
