--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0"
 futures = "0.3"
-hyper = { git = "https://github.com/hyperium/hyper", rev = "b4e2433", features = ["full"] }
-notify = "5.0.0-pre.3"
-tokio = { version = "0.3", features = ["fs", "macros", "rt-multi-thread", "sync"] }
-tokio-tungstenite = "0.12"
+hyper = { version = "0.14", features = ["full"] }
+notify = "5.0.0-pre.8"
+tokio = { version = "1.6", features = ["fs", "macros", "rt-multi-thread", "sync"] }
+tokio-tungstenite = "0.14"
 wasm-bindgen-cli-support = "0.2"
